Changement de nom de Vote en Question, et création du Vote effectif.

--- a/dlglistevote.ui
+++ b/dlglistevote.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DlgListeVote</class>
- <widget class="QDialog" name="DlgListeVote">
+ <class>DlgListeQuestion</class>
+ <widget class="QDialog" name="DlgListeQuestion">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -51,7 +51,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>DlgListeVote</receiver>
+   <receiver>DlgListeQuestion</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -67,7 +67,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>DlgListeVote</receiver>
+   <receiver>DlgListeQuestion</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
