--- a/dlgeditvote.ui
+++ b/dlgeditvote.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DlgEditVote</class>
- <widget class="QDialog" name="DlgEditVote">
+ <class>DlgEditQuestion</class>
+ <widget class="QDialog" name="DlgEditQuestion">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -51,7 +51,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>DlgEditVote</receiver>
+   <receiver>DlgEditQuestion</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -67,7 +67,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>DlgEditVote</receiver>
+   <receiver>DlgEditQuestion</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
