Votes à bulletin secret

--- a/dlglistevote.ui
+++ b/dlglistevote.ui
@@ -14,10 +14,26 @@
    <string>Vote</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0" rowspan="2">
+    <widget class="QListWidget" name="lstPossibles"/>
+   </item>
+   <item row="0" column="2" rowspan="2">
+    <widget class="QListWidget" name="lstSelectionnes"/>
+   </item>
    <item row="1" column="1">
     <widget class="QPushButton" name="btnDeselect">
      <property name="text">
       <string>&lt;</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="3">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
@@ -28,19 +44,10 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0" rowspan="2">
-    <widget class="QListWidget" name="lstPossibles"/>
-   </item>
-   <item row="0" column="2" rowspan="2">
-    <widget class="QListWidget" name="lstSelectionnes"/>
-   </item>
    <item row="2" column="0" colspan="3">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+    <widget class="QCheckBox" name="chbBulletinSecret">
+     <property name="text">
+      <string>Vote à bulletin secret</string>
      </property>
     </widget>
    </item>
