--- a/dlgconnexion.ui
+++ b/dlgconnexion.ui
@@ -24,13 +24,27 @@
    <item row="0" column="1">
     <widget class="QLineEdit" name="edtPseudo"/>
    </item>
-   <item row="1" column="0" colspan="2">
+   <item row="2" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="edtPasse">
+     <property name="echoMode">
+      <enum>QLineEdit::Password</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="lblPasse">
+     <property name="text">
+      <string>Mot de passe :</string>
      </property>
     </widget>
    </item>
