--- a/dlgeditvote.ui
+++ b/dlgeditvote.ui
@@ -14,14 +14,14 @@
    <string>Question</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
-   <item row="0" column="0">
+   <item row="1" column="0">
     <widget class="QLabel" name="lblQuestion">
      <property name="text">
       <string>Question :</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="2">
+   <item row="3" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -31,18 +31,35 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
+   <item row="1" column="1">
     <widget class="QTextEdit" name="edtQuestion"/>
    </item>
-   <item row="1" column="0">
+   <item row="2" column="0">
     <widget class="QLabel" name="lblOuverture">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text">
       <string>Date d'ouverture :</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QDateTimeEdit" name="edtOuvertureDate"/>
+   <item row="2" column="1">
+    <widget class="QDateTimeEdit" name="edtOuvertureDate">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QComboBox" name="cbxType"/>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Type de scrutin :</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
