--- a/dlgeditvote.ui
+++ b/dlgeditvote.ui
@@ -21,7 +21,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2">
+   <item row="4" column="0" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -58,6 +58,13 @@
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Type de scrutin :</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QPushButton" name="btnClore">
+     <property name="text">
+      <string>Clore le vote</string>
      </property>
     </widget>
    </item>
